    under 10.x kernels, provided by Steven Chamberlain. Closes: #762404.

  [ Aurelien Jarno ]
  * Remove mtrace(1) and pldd(1) manpages, provided by the manpages package
    starting with version 3.74.
  * debian/control.in/*: update the syntax of the Build-Profiles field and
    build depends on dpkg-dev (>= 1.17.14) to get the new feature. Closes:
    #764274.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Sep 2014 07:22:45 +0200

glibc (2.19-11) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-thread-cancel.diff: Update patch against two other
    overzealous assertions.
  * patches/hurd-i386/submitted-bind_umask.diff: Split into cvs-bind_umask.diff
    and submitted-bind_umask2.diff as requested by upstream.
  * patches/hurd-i386/cvs-fork_ss_hang.diff: New patch which fixes some dash
    hangs.
  * patches/hurd-i386/cvs-libpthread_guardsize.diff: Add another guard size
    computation fix.  Fixes gcj's boehm-gc.  Closes: #760076.

  [ Aurelien Jarno ]
  * debian/control.in/main: Build-Depends on dpkg (>= 1.17.11) instead of
    dpkg-dev (>= 1.17.1).  Closes: #759495.
  * debian/debhelper.in/libc.{preinst,postinst,postrm}: correctly remove old
    conffiles /etc/ld.so.conf.d/i486-{kfreebsd-gnu.conf,gnu-gnu.conf,gnu.conf}.
    Closes: #759568.
  * Update Italian debconf translation, by Luca Monducci.  Closes: #760092.

  [ Petr Salinger ]
  * kfreebsd/local-fbtl.diff: update to revision 5520 (from glibc-bsd).
    Fixes x87 precision mode in newly created pthreads. Closes: #761175.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 12 Sep 2014 23:49:50 +0200

glibc (2.19-10) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/rules: drop the i486 to i586 GNU triplet conversion.
  * debian/control.in/main: build-depends on dpkg-dev (>= 1.17.1) and
    gcc-4.8 (>= 4.8.3-8) to make sure to get the new i586 GNU triplet on
    i386, hurd-i386 and kfreebsd-i386.
  * Remove iconv(1), iconvconfig(8), localedef(1) and sprof(1) manpages,