@@ -20,6 +20,10 @@ glibc (2.19-12) UNRELEASED; urgency=medium
     build depends on dpkg-dev (>= 1.17.14) to get the new feature. Closes:
     #764274.
 
+  [ Helmut Grohne ]
+  * debian/patches/any/local-bootstrap-headers.diff: Update to handle
+    stubs-$abi.h which is required for multilib bootstraps. Closes: #756473
+
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Sep 2014 07:22:45 +0200
 
 glibc (2.19-11) unstable; urgency=medium
